# pii-master

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pyrightconfig.json  requirements.txt  vercel.json
api/: index.py  requirements.txt
config/: settings.yaml
config/policies/: gdpr.yaml  hipaa.yaml  iso27001.yaml  pci_dss.yaml  soc2.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
src/: __init__.py  pipeline.py
src/alerting/: alert_manager.py
src/api/: app.py  middleware.py  routes.py  schemas.py
src/classification/: risk_scorer.py
src/compliance/: policy_engine.py
src/core/: __init__.py  database.py  security.py
src/detection/: document_parser.py  engine.py  ner_detector.py  regex_detector.py
src/explainability/: explainer.py
src/masking/: masker.py
src/reporting/: report_generator.py
tests/: demo_data.py  test_api.py  test_core.py  test_detection.py
