[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-shield"
version = "1.0.0"
description = "Enterprise PII Detection, Classification & Compliance Engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "PII Shield Team"}]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pyright]
extraPaths = ["."]
pythonVersion = "3.11"
